@@ -4,13 +4,13 @@
       "Graham Ollis <plicease@cpan.org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.421",
+   "generated_by" : "Module::Build version 0.4231",
    "license" : [
       "perl_5"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "FFI-Platypus-Lang-CPP",
    "no_index" : {
@@ -57,14 +57,16 @@
    "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
-         "web" : "http://github.com/plicease/FFI-Platypus-Lang-CPP/issues"
+         "web" : "http://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues"
       },
       "license" : [
          "http://dev.perl.org/licenses/"
       ],
       "repository" : {
-         "url" : "http://github.com/plicease/FFI-Platypus-Lang-CPP"
-      }
+         "url" : "http://github.com/PerlFFI/FFI-Platypus-Lang-CPP"
+      },
+      "x_IRC" : "irc://irc.perl.org/#native"
    },
-   "version" : "0.04"
+   "version" : "0.04",
+   "x_serialization_backend" : "JSON::PP version 4.04"
 }
