@@ -14,7 +14,7 @@ configure_requires:
   Module::Build: '0.38'
   Module::Build::FFI: '0.18'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.421, CPAN::Meta::Converter version 2.143240'
+generated_by: 'Module::Build version 0.4231, CPAN::Meta::Converter version 2.150010'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +32,9 @@ requires:
   FFI::Platypus: '0.18'
   perl: '5.008001'
 resources:
-  bugtracker: http://github.com/plicease/FFI-Platypus-Lang-CPP/issues
+  IRC: irc://irc.perl.org/#native
+  bugtracker: http://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues
   license: http://dev.perl.org/licenses/
-  repository: http://github.com/plicease/FFI-Platypus-Lang-CPP
+  repository: http://github.com/PerlFFI/FFI-Platypus-Lang-CPP
 version: '0.04'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
