@@ -437,14 +437,14 @@ SUPPORT
     should, or if you have a feature request, please open an issue on this
     project's GitHub issue tracker:
 
-    https://github.com/plicease/FFI-Platypus-Lang-CPP/issues
+    https://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues
 
 CONTRIBUTING
 
     If you have implemented a new feature or fixed a bug then you may make
     a pull reequest on this project's GitHub repository:
 
-    https://github.com/plicease/FFI-Platypus-Lang-CPP/issues
+    https://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues
 
     Caution: if you do this too frequently I may nominate you as the new
     maintainer. Extreme caution: if you like that sort of thing.
